Fixes: Friends list alignment issue fix

--- a/src/theme/css/sidebarLeft.css
+++ b/src/theme/css/sidebarLeft.css
@@ -33,7 +33,6 @@
 }
   
 .user-widget img {
-  float: left;
   margin-right: 20px;
   width: 50px;
   height: 50px;
@@ -45,7 +44,8 @@
 }
   
 .friend-widget {
-  margin-bottom: 20px;
+  padding-bottom: 20px;
+  height: 75px;
 }
   
 .friend-widget img {
